--- a/public/index.html
+++ b/public/index.html
@@ -11,11 +11,10 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>INTEGRANTES</title>
+    <title>REACT - INTEGRANTES</title>
   </head>
   <body>
-
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>Você precisa habilitar o JavaScript para executar este aplicativo.</noscript>
     <div id="root"></div>
   </body>
 </html>
